# simple-mp3-downloader

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: precheck.yml
assets/: icon.icns
src/: app.rs  main.rs
src/api/: client.rs  mod.rs  models.rs
src/application/: download_coordinator.rs  mod.rs
src/domain/: error.rs  mod.rs  model.rs
src/ui/: mod.rs
src/utils/: mod.rs
