[package]
name = "simple-mp3-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
bytes = "1.0"
url = "2.5"
rfd = "0.17.2"
futures = "0.3.32"
regex = "1.12.3"
image = "0.25"

[dev-dependencies]
mockito = "1.5"

[package.metadata.bundle]
name = "SimpleMP3Downloader"
identifier = "p.raymond.mp3downloader"
icon = ["assets/icon.png", "assets/icon.icns"]
version = "0.1.0"
copyright = "Copyright © 2026"
category = "Utility"
